<resources>
    <string name="app_name">Aqua Balance</string>
    <string name="action_settings">Settings</string>
    <string name="you_drink">You drink</string>

    <string name="ml0">0/2L</string>
    <string name="ml200">200ml/2L</string>
    <string name="ml400">400ml/2L</string>
    <string name="ml600">600ml/2L</string>
    <string name="ml800">800ml/2L</string>
    <string name="ml1000">1L/2L</string>
    <string name="ml1200">1.2L/2L</string>
    <string name="ml1400">1.4L/2L</string>
    <string name="ml1600">1.6L/2L</string>
    <string name="ml1800">1.8L/2L</string>
    <string name="ml2000">2L/2L</string>
    <string name="full">daily rate</string>

    <string name="full_bottle">Drunk daily rate</string>
    <string name="keep_calm">Keep calm and drink water</string>

    <string name="drink">Drink</string>
    <string name="ml">ml</string>

    <string name="drink_400ml">Drink 400ml</string>
    <string name="drink_200ml">Drink 200ml</string>
    <string name="cancel">Cancel</string>
    <string name="clear">Clear</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    
    <string name="progress">Progress</string>
    <string name="statistics">Statistics</string>
    <string name="notification">Reminder</string>
    <string name="news">News</string>
    <string name="system">System</string>
    <string name="Settings">Settings</string>
    <string name="give_feedback">Give feedback</string>

    <string name="percent">%</string>
    
    <string name="overall">Overall</string>
    <string name="person_info">Personal Information</string>
    <string name="weight_age_weight">Weight, age, weight</string>
    <string name="water_volume">Water volume</string>
    <string name="normally_drink">the amount of water that you drink</string>
    <string name="time_reminders">Time reminders</string>
    <string name="selected_time">Selected time</string>
    <string name="weight">Weight</string>

    <string name="cool">Cool (+0%)</string>
    <string name="cold">Cold (+5%)</string>
    <string name="head">Heat (+10%)</string>
    <string name="hot">Hot (+15%)</string>

    <string name="quiet">Quiet (+0%)</string>
    <string name="normal">Normal (+10%)</string>
    <string name="activity">Activity (+20%)</string>
    <string name="sharply">Sharply (+40%)</string>

    <string name="every_30m">Every 30m</string>
    <string name="every_1h">Every 1h</string>
    <string name="every_2h">Every 2h</string>
    <string name="sound">Sound</string>
    <string name="enable_sound">Enable sound</string>
    <string name="off_sound">Turn off the sound</string>
    <string name="vibration">Vibration</string>
    <string name="enable_vibration">Enable vibrate</string>
    <string name="off_vibration">Turn off the vibrate</string>
    <string name="sound_vibrate">Sound,Vibration</string>
    <string name="selected_weight">Enter your weight</string>
    <string name="selected_age">Select your  age</string>
    <string name="age">Age</string>
    <string name="weather">Weather</string>
    <string name="notification_settings">Notification settings</string>
    <string name="selected_weather">Selected weather</string>
    <string name="sport_style">Choose your lifestyle</string>
    <string name="sport">Sport</string>
    <string name="awakening">Awakening</string>
    <string name="sleep">Sleep</string>
    <string name="time_to_sleep">Select sleep time</string>
    <string name="wake_up_time">Enter the wake-up time</string>

    <string name="years_10_12">10-12 years</string>
    <string name="years_13_14">13-14 years</string>
    <string name="years_16_18">15-16 years</string>
    <string name="years_18_plus">> 18 years</string>
    <string name="max_volume_drink">Enter the maximum volume of water consumed</string>
    <string name="min_volume_drink">enter the minimum volume of water consumed</string>
    <string name="max_dose">The maximum dose</string>
    <string name="min_dose">The minimum dose</string>


</resources>
