<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/overall">

        <PreferenceScreen
            android:icon="@drawable/ic_person"
            android:summary="@string/weight_age_weight"
            android:title="@string/person_info">

            <PreferenceCategory android:title="@string/person_info">

                <EditTextPreference
                    android:icon="@drawable/ic_weight"
                    android:inputType="number"
                    android:key="menu_weight"
                    android:summary="@string/selected_weight"
                    android:title="@string/weight" />

                <EditTextPreference
                    android:icon="@drawable/ic_age"
                    android:inputType="number"
                    android:key="menu_age"
                    android:summary="@string/selected_age"
                    android:title="@string/age" />

                <ListPreference
                    android:entries="@array/listArrayWeather"
                    android:entryValues="@array/listValuesWeather"
                    android:icon="@drawable/ic_weather"
                    android:key="menu_weather"
                    android:summary="@string/selected_weather"
                    android:title="@string/weather" />

            </PreferenceCategory>

        </PreferenceScreen>

        <Preference
            android:icon="@drawable/ic_drink"
            android:summary="@string/normally_drink"
            android:title="@string/water_volume" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/notification">

        <ListPreference
            android:defaultValue="digiGreen"
            android:entries="@array/listArray"
            android:entryValues="@array/listValues"
            android:icon="@drawable/ic_time"
            android:key="menu_notification"
            android:summary="@string/selected_time"
            android:title="@string/time_reminders" />

        <PreferenceScreen
            android:icon="@drawable/ic_volume"
            android:summary="@string/Settings"
            android:title="@string/sound_vibrate">

            <PreferenceCategory android:title="@string/notification_settings">

                <CheckBoxPreference
                    android:icon="@drawable/ic_bell"
                    android:key="menu_sound"
                    android:summaryOff="@string/off_sound"
                    android:summaryOn="@string/enable_sound"
                    android:title="@string/sound" />

                <CheckBoxPreference
                    android:icon="@drawable/ic_vibrate"
                    android:key="menu_vibrate"
                    android:summaryOff="@string/off_vibration"
                    android:summaryOn="@string/enable_vibration"
                    android:title="@string/vibration" />

            </PreferenceCategory>

        </PreferenceScreen>

    </PreferenceCategory>

</PreferenceScreen>